# annotation-pipeline-skill

./: .gitignore  CHANGELOG.md  PRODUCT_DESIGN.md  README.md  RUNTIME_GOAL.md  TECHNICAL_ARCHITECTURE.md  db.sqlite  pyproject.toml  start.sh
docs/: consensus-annotation.md
scratch/: arbiter_output.json  check_draft.py
scripts/: apply_contested_conventions.py  batch_apply_all_contested.py  batch_fix_v9.py  batch_resolve_contested.py  bootstrap_entity_statistics.py  bulk_set_lowinfo_not_an_entity.py  find_near_duplicates_minhash.py  find_semantic_clusters.py  fix_v4_prelabels.py  hr_autofix_recovery.py  migrate_llm_profiles.py  migrate_v3_to_v4.py  migrate_v4_to_v5.py  pull_non_verbatim_arbitrating_to_pending.py  rebootstrap_stats_merged.py  recheck_prior_overrides.py  reject_template_tasks.py  rewind_402_false_hr.py  rewind_accepted_for_rules_test.py  rewind_retryable_hr.py  rollback_low_jaccard_masks.py  row_dedup_scan.py  sample_check.py  test_providers.py
tests/: test_annotation_config.py  test_annotation_validator.py  test_anthropic_sdk_client.py  test_base_sdk_client.py  test_check_past_experience.py  test_cli.py  test_coerce_to_enum.py  test_config_loader.py  test_consensus.py  test_consensus_accuracy.py  test_consensus_annotation_runtime.py  test_convention_aggregate_columns.py  test_convention_api_endpoint.py  test_convention_distinct_task_gate.py  test_convention_injection_prefilter.py  test_convention_list_pagination.py  test_convention_rebuild.py  test_dashboard_api_distribution.py  test_dashboard_api_row_dedup.py  test_dashboard_snapshot.py  (+43 more)
(+110 files in other folders)
