[project]
name = "annotation-pipeline-skill"
version = "0.1.0"
description = "Local-first annotation pipeline skill foundation"
requires-python = ">=3.11"
dependencies = [
  "openai>=2.0",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "jsonschema>=4.0",
  "robust-json-parser>=0.1",
  "datasketch>=1.6",
  "numpy>=1.26",
  "httpx>=0.27",
  "wordfreq>=3.0",
  "umap-learn>=0.5",
  "hdbscan>=0.8",
  "matplotlib>=3.8",
]

[project.scripts]
annotation-pipeline = "annotation_pipeline_skill.interfaces.cli:console_main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["annotation_pipeline_skill*"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
